# image_editor

./: .gitignore  CMakeLists.txt  build.sh
include/: drawing_space.hpp  gui_elements.hpp  image_handler.hpp  new_gui_elements.hpp  shader_s.h
src/: app.cpp  drawing_space.cpp  gui_elements.cpp  image_handler.cpp  new_gui_elements.cpp  test_gui.cpp  test_gui_2.cpp
src/fragment/: newtest2.fs  newtest3.fs  test.fs  test2.fs  test3.fs
src/vertex/: newtest2.vs  test.vs  test2.vs
